# voice-assistent

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  client_requirements.txt  config.yaml  files_map.md  main.py  prd_leonardo_voice_assistant_prototype_mac_all_in_one.md  pyproject.toml  server_requirements.txt
assistant/: language.py  metrics.py  session.py  state_machine.py  telemetry.py
audio/: capture.py  earcon.py  playback.py  ring_buffer.py  vad.py
client/: chunk_player.py  config.yaml  connection.py  main.py  state_machine.py
client/audio/: capture.py  earcon.py  playback.py  ring_buffer.py  vad.py
client/wake/: detector.py
docs/: deployment_agent_rpi4_ubuntu_minipc.md  files_map.md  robustness_checklist.md
llm/: openrouter_client.py  prompt.py
scripts/: deploy_client.sh  deploy_server.sh  files_map.md  soak_test.py  upgrade_kokoro.sh
server/: app.py  config.yaml  main.py  session_handler.py
server/assistant/: language.py  metrics.py  session.py
server/llm/: openrouter_client.py  prompt.py
server/stt/: filters.py
server/tts/: __init__.py  kokoro_tts.py  piper_tts.py
shared/: protocol.py
stt/: whisper_stt.py
tests/: files_map.md  test_audio_capture_drops.py  test_chunk_player.py  test_client_state_machine.py  test_connection.py  test_integration.py  test_kokoro_tts.py  test_language_detection.py  test_metrics.py  test_openrouter_retries.py  test_prompt_cleaning.py  test_protocol.py  test_session_handler.py  test_state_machine_flow.py  test_state_machine_privacy.py
tts/: __init__.py  mac_say.py  piper_tts.py
