[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leonardo-assistant"
version = "0.1.0"
description = "macOS desktop voice assistant triggered by wake word"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.24",
    "soundfile>=0.12",
    "webrtcvad>=2.0.10",
    "openwakeword>=0.6",
    "faster-whisper>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
leonardo = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["assistant", "audio", "wake", "stt", "llm", "tts"]
